<resources>
    <string name="app_name">Intern Project</string>
    <string name="phone_number">Phone Number</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>