<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="40dp"

    ><RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#F6F7FA">


        <TextView
            android:id="@+id/txt_num"
            android:layout_width="120dp"
            android:layout_height="102dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/bg_red"
            android:gravity="center"
            android:text="@string/textview"
            android:textColor="#fff"
            android:textSize="32sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="120dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="160dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/baseline_close_24" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">


        <TextView
            android:id="@+id/txt_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:textSize="18sp"
            android:text="@string/name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="20dp"
            android:background="#BAB4B4" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/txt_Phone_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="135dp"
            android:textSize="18sp"
            android:text="@string/phone_number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="210dp"
            android:layout_marginHorizontal="20dp"
            android:background="#BAB4B4" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="177dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="245dp"
            android:textSize="18sp"
            android:text="@string/email" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="320dp"
            android:layout_marginHorizontal="20dp"
            android:background="#BAB4B4" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="287dp"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/textview" />

        <TextView
            android:id="@+id/txt_Birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="355dp"
            android:textSize="18sp"
            android:text="@string/date_of_birth" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="430dp"
            android:layout_marginHorizontal="20dp"
            android:background="#BAB4B4" />

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="397dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/textview" />


    </RelativeLayout>

</RelativeLayout>



</LinearLayout>